# btc-institutional-flow

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTEXT.md  Dockerfile  Makefile  Procfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_api.py  start_api.sh
.github/workflows/: ci.yml  daily-recap.yml  edgar-refresh.yml
config/: settings.yaml  weights.yaml
data/: structured_notes.db
docs/: ANALYTICS.md  ARCHITECTURE.md  AUDIT-REPORT-2026-03-31.md  DASHBOARD.md  EDGAR.md  GEX.md
memory/: MEMORY.md
scripts/: cron_calibrate.py  cron_edgar.py  cron_gex.py  cron_ifi.py  cron_predict.py  cron_signal.py  cron_snapshot_barriers.py  cron_verify.py  export_edgar_dump.py  fetch_farside.py  notify_telegram.py  reparse_goldman.py  run_analytics.py  run_coinglass.py  run_edgar.py  run_flows.py  run_gex.py
src/: __init__.py  config.py
src/alerts/: __init__.py  alert_db.py  gex_alert_monitor.py  telegram_client.py  templates.py
src/analytics/: backtest.py  confluence_backtest.py  event_study.py  factor_scorers.py  granger.py  ifi.py  ifi_db.py  ifi_updater.py  pillars.py  regime_analysis.py  signal_db.py  signal_model.py  signal_validation.py  wagmi.py
src/api/: auth.py  cache.py  helpers.py  main.py  scheduler.py  schemas.py
src/dashboard/: app.py  charts.py  data_loader.py  header.py  sidebar.py
src/edgar/: barrier_utils.py  models.py  parser.py  search.py  structured_notes_db.py
src/flows/: coinglass_client.py  correlation.py  edgar_nport.py  macro_fetcher.py  models.py  price_fetcher.py  scraper.py  (+1 more)
tests/: conftest.py
(+64 files in other folders)
